; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/model01/extr_matrix.c_i2c_set_keyscan_interval.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/model01/extr_matrix.c_i2c_set_keyscan_interval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TWI_CMD_KEYSCAN_INTERVAL = common dso_local global i32 0, align 4
@I2C_TIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @i2c_set_keyscan_interval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2c_set_keyscan_interval(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca [2 x i32], align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  %8 = load i32, i32* @TWI_CMD_KEYSCAN_INTERVAL, align 4
  store i32 %8, i32* %7, align 4
  %9 = getelementptr inbounds i32, i32* %7, i64 1
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %9, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @I2C_ADDR(i32 %11)
  %13 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  %14 = load i32, i32* @I2C_TIMEOUT, align 4
  %15 = call i32 @i2c_transmit(i32 %12, i32* %13, i32 8, i32 %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  ret i32 %16
}

declare dso_local i32 @i2c_transmit(i32, i32*, i32, i32) #1

declare dso_local i32 @I2C_ADDR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
